--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "d3-shape": "^1.3.7",
+    "lottie-ios": "^3.1.3",
+    "lottie-react-native": "^3.4.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
